Maj: Avancement header footer

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,7 +7,7 @@ $footer-color: #000000;
 // $loading-color1: #9356DC;
 // $loading-color2: #FF79DA;
 
-$text-font: 'Raleway';
+$text-font: 'Saira Semi Condensed';
 
 $small-radius: 5px;
 $medium-radius: 10px;
