--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -1,3 +1,6 @@
+// @use '../../sass/utils/variables';
+@use '../../sass/utils/mixins';
+
 *,
 ::before,
 ::after{
@@ -5,13 +8,15 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    background-color: black;
 }
 
 :root{
     // 1rem = 10px
-    font-size: 62.5%;
+    font-size: 100%;
 }
 
-// main{
-//     @include mixins.largeScreen
-// }
+main{
+    @include mixins.largeScreen;
+    border: 1px solid black;
+}
