--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,11 +1,15 @@
-// @use "../utils/variables";
+@use "../utils/variables";
 // @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Saira+Semi+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-// body{
-//     font-family: variables.$text-font,sans-serif;
-// }
 
-// a{
-//     text-decoration: none;
-//     color: inherit;
-// }
+
+body{
+    font-family: variables.$text-font,sans-serif;
+    
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
