--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
-$primary-color: #0065FC;
-$secondary-color: #DEEBFF;
-$tertiary-color: #F2F2F2;
+$primary-color: white;
+$secondary-color: #0a8973;
+$tertiary-color: violet;
 $fourth-color: #F6F6F6;
 $footer-color: #000000;
 
