--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color: white;
-$secondary-color:  #c139c7;
-$tertiary-color: #0a8973;
+$secondary-color: #13589f;
+$tertiary-color: violet;
 $fourth-color: #F6F6F6;
 $footer-color: #000000;
 
