--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -6,36 +6,41 @@ footer{
     display: flex;
     justify-content: space-between;
     // align-items: center;
-    border: 3px solid white;
+    border: 1px solid variables.$primary-color;
     border-radius: 15px;
     color: white;
     padding: 0;
-    // background-image: url("../../assets/img/panneau.png");
-    // background-repeat: no-repeat;
-    // background-size: 300px 200px;
+    background-image: url("../../assets/img/footer_bg.png");
+    background-size: 1280px 200px;
     position: relative;
+    height: 130px;
+    z-index: 11;
+    padding: 30px;
             
-        .infos{
-            // margin-left:110px;
-            // margin-top: 35px;
+    .infos{
+        background-color: transparent;
+        &__item{
             background-color: transparent;
-            &__item{
-                background-color: transparent;
-                margin-bottom: 5px;
+            margin-bottom: 5px;
+        }
+    }
+
+    .reseaux{
+        display: flex;
+        align-items: center;
+        justify-content: right;
+        font-size: 50px;
+        color: variables.$primary-color;
+        background-color: transparent;
+    
+        &__item{
+            margin-right: 10px;
+
+            & a{
+                & i{
+                    background-image: none;
+                }
             }
         }
-
-        .reseaux{
-            display: flex;
-            align-items: center;
-            justify-content: right;
-            font-size: 50px;
-            color: variables.$secondary-color;
-            background-color: transparent;
-
-            &__item{
-                margin-right: 10px;
-            }
-
-        }
+    }
 }
