--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -11,7 +11,7 @@
         top:0;
         left:0px;
         opacity: 0;
-        animation: wind 1.5s 600ms ease-in forwards;
+        animation: rain 1.5s 600ms ease-in forwards;
   
 
         @media screen and (max-width: variables.$breakpoint-tablette) {
@@ -31,7 +31,7 @@
     }
 }
 
-@keyframes wind{
+@keyframes rain{
     0%{
         opacity: 0;
         transform: translateY(-250px);
