--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -6,10 +6,12 @@ header{
     margin-top: 50px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     color: white;
     background-image: url(../../assets/img/header_bg.png);
     background-repeat: no-repeat;
-    background-size: 1240px 70px;
+    background-size: 1280px 80px;
+    border-radius: 10px;
 
     @media screen and (max-width: variables.$breakpoint-tablette) {
         background-size: cover
@@ -17,6 +19,7 @@ header{
 
     @media screen and (max-width: variables.$breakpoint-mobile) {
         justify-content: left;
+        padding: 0 5px;
     }
     
     .logo{  
@@ -42,15 +45,15 @@ header{
             }
 
             @media screen and (max-width: variables.$breakpoint-mobile) {
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
             }
         }    
     }
 
     .list{
-        flex: 1.2;
         display: flex;
+        flex: 1.3;
         justify-content: right;
         font-size: 20px;
         background-color: transparent;
@@ -59,6 +62,7 @@ header{
         @media screen and (max-width: variables.$breakpoint-tablette) {
             justify-content: left;
             margin-left: 7px;
+            flex: 0.9;
         }
 
         @media screen and (max-width: variables.$breakpoint-mobile) {
@@ -90,7 +94,7 @@ header{
 
     #autotext{
         display: flex;
-        flex: 1;
+        flex: 0.7;
         justify-content: right;
         border-right: 0.15em solid variables.$secondary-color;
         letter-spacing: 0.10em;
@@ -111,9 +115,18 @@ header{
             background-color: transparent;
             animation: change-text 10s forwards;
         }
-
     }
-    
+
+    .switch{
+        display: flex;
+        flex: 0.2;
+        // margin-right: 30px;
+        justify-content: right;
+
+        @media screen and (max-width: variables.$breakpoint-mobile) {
+            margin-right: 0px;
+        }
+    }
 }
 
 @keyframes change-text {
