--- a/src/sass/base/_settings.scss
+++ b/src/sass/base/_settings.scss
@@ -8,7 +8,6 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    background-color: black;
 }
 
 :root{
@@ -18,5 +17,5 @@
 
 main{
     @include mixins.largeScreen;
-    border: 1px solid black;
+    // border: 1px solid black;
 }
