--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -3,7 +3,18 @@
 .switch{
     position: relative;
     display: inline-block;
+    width: 56px;
+    height: 28px;
 
+    @media screen and (max-width: variables.$breakpoint-tablette) {
+        width: 53px;
+        height: 27px;
+    }
+
+    @media screen and (max-width: variables.$breakpoint-mobile) {
+        width: 44px;
+        height: 22px;
+    }
 }
 
 input{
@@ -13,8 +24,17 @@ input{
 
     &:checked {
         &+ .slider::before{
-            transform: translateX(26px);
+            transform: translateX(25px);
             background-color: rgb(7, 69, 193);
+
+            @media screen and (max-width: variables.$breakpoint-tablette) {
+                transform: translateX(23px);
+            }
+        
+            @media screen and (max-width: variables.$breakpoint-mobile) {
+                justify-content: left;
+                transform: translateX(20px);
+            }
         }
 
         &+ .slider{
@@ -45,4 +65,28 @@ input{
         transition: 0.4s;
     }
 }
+
+
+// Léorio
+/********/
+
+// .switch{
+//     position: relative;
+//     border-radius: 20px;
+//     background-color: white;
+// }
+
+// .slider {
+//     position: absolute;
+//     cursor:  pointer;
+//     top:3px;
+//     left: 3px;
+//     border-radius: 20px;
+//     background-color: rgb(0, 0, 0);
+//     transition: left 0.4s ease-in-out, background-color 0.4s ease-in-out;
+
+//     &.selected {
+//         background-color: rgb(20, 105, 216);
+//     }
+// }
 
