--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -5,28 +5,49 @@ footer{
     @include mixins.largeScreen;
     display: flex;
     justify-content: space-between;
-    border: 1px solid variables.$primary-color;
-    border-radius: 15px;
+    align-items: center;
+    border: 2px solid grey;
+    border-radius: 30px;
     color: white;
-    padding: 0;
     background-image: url("../../assets/img/footer_bg.png");
     background-size: 1280px 200px;
     background-repeat: no-repeat;
     position: relative;
-    height: 130px;
+    height: 100px;
     z-index: 11;
-    padding: 30px;
-
+   
     @media screen and (max-width: variables.$breakpoint-tablette) {
-        background-size: 992px 200px
+        background-size: variables.$breakpoint-tablette 200px;
+        @include mixins.mediumScreen;
+        padding: 10px 10px;
+        height: 100px;
     }
 
     @media screen and (max-width: variables.$breakpoint-mobile) {
-        background-size: 768px 200px
+        background-size: variables.$breakpoint-tablette 200px;
+        @include mixins.smallScreen;
+        height: 80px;
+        border-radius: 20px;
     }
             
     .infos{
         background-color: transparent;
+   
+        @media screen and (max-width: variables.$breakpoint-tablette) {
+            background-size: variables.$breakpoint-tablette 200px;
+            @include mixins.mediumScreen;
+            font-size: 15px;
+        }
+    
+        @media screen and (max-width: variables.$breakpoint-mobile) {
+            background-size: variables.$breakpoint-tablette 200px;
+            @include mixins.smallScreen;
+            height: 80px;
+            border-radius: 20px;
+            font-size: 13px;
+            padding: 10px 0px;
+        }
+           
         &__item{
             background-color: transparent;
             margin-bottom: 5px;
