--- a/src/layout/Header/Header.module.scss
+++ b/src/layout/Header/Header.module.scss
@@ -3,23 +3,27 @@
 
 header{
     @include mixins.largeScreen;
-    margin-top: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     color: white;
     background-image: url(../../assets/img/header_bg.png);
     background-repeat: no-repeat;
-    background-size: 1280px 80px;
-    border-radius: 10px;
+    background-size: cover;
+    border-radius: 30px;
+    height: 100px;
 
     @media screen and (max-width: variables.$breakpoint-tablette) {
-        background-size: cover
+        // background-size: cover;
+        @include mixins.mediumScreen;
     }
 
     @media screen and (max-width: variables.$breakpoint-mobile) {
         justify-content: left;
-        padding: 0 5px;
+        padding: 0px 5px !important;
+        @include mixins.smallScreen;
+        height: 60px;
+        border-radius: 10px;
     }
     
     .logo{  
@@ -54,6 +58,7 @@ header{
     .list{
         display: flex;
         flex: 1.3;
+    
         justify-content: right;
         font-size: 20px;
         background-color: transparent;
