--- a/global.css
+++ b/global.css
@@ -5,3 +5,15 @@
 .dark{
     background-color: black;
 }
+
+@media(prefers-color-scheme: ligth){
+    body {
+        background-color: white;
+    }
+}
+
+@media(prefers-color-scheme: dark){
+    body {
+        background-color: black;
+    }
+}
