--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -8,10 +8,9 @@ footer{
     align-items: center;
     border: 2px solid grey;
     border-radius: 30px;
-    color: white;
-    background-image: url("../../assets/img/footer_bg.png");
-    background-size: 1280px 200px;
-    background-repeat: no-repeat;
+    // background-image: url("../../assets/img/bklight.png");
+    // background-size: 1280px 200px;
+    // background-repeat: no-repeat;
     position: relative;
     height: 100px;
     z-index: 11;
@@ -59,7 +58,6 @@ footer{
         align-items: center;
         justify-content: right;
         font-size: 50px;
-        color: variables.$primary-color;
         background-color: transparent;
     
         &__item{
