--- a/global.scss
+++ b/global.scss
@@ -5,8 +5,12 @@
     background-color: #fff;
     font-weight: 500;
 
-    & header, footer{
-        background-image: url(./src/assets/img/bg_light.png);
+    & header{
+        background-image: url(./src/assets/img/bg_light_header.png);
+        color: black;
+    }
+    & footer{
+        background-image: url(./src/assets/img/bg_light_footer.png);
         color: black;
     }
 
@@ -30,8 +34,12 @@
 .dark {
     background-color: black;
 
-    & header, footer{
-        background-image: url(./src/assets/img/bg_dark.png);
+    & header{
+        background-image: url(./src/assets/img/bg_dark_header.png);
+        color: white;
+    }
+    & footer{
+        background-image: url(./src/assets/img/bg_dark_footer.png);
         color: white;
     }
 }
