Maj: Push pour Leorio

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -4,6 +4,7 @@
 .banner{
     width: 100px;
     height: 550px;
+    flex: 0.5;
 
     @media screen and (max-width: variables.$breakpoint-tablette) {
         width: 80px;
