--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -1,3 +1,12 @@
 .projects{
     display: flex;
+
+    &__content{
+        flex: 4;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // background-color: rgb(237, 232, 237);
+        border-radius: 20px;
+    }
 }
