Fix: Changements des chemins des background header/footer

--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -76,6 +76,6 @@ footer{
 }
 
 .light{
-    background-image: url(./src/assets/img/bg_light_footer.png);
+    background-image: url(../../assets/img/bg_light_footer.png);
     color: black;
 }
